--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         Welcome to Ubuntu Client
+
+        <a href="http://localhost:8080">Transmission</a>
     </body>
 </html>
