refactor structure, add logging, use port 80

--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,11 @@
         Welcome to Ubuntu Client
 
         <br /><a href="http://10.0.0.80:9091">Transmission</a>
+	<br />
+<audio controls>
+  <source src="horse.ogg" type="audio/ogg">
+  <source src="http://glzwizzlv.bynetcdn.com/glz_mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
     </body>
 </html>
